fix: Nav component z-index issue

--- a/src/shared/css/nav.css
+++ b/src/shared/css/nav.css
@@ -16,7 +16,7 @@ body {
     position: fixed;
     top: 0;
     height: 100px;
-    z-index: 1;
+    z-index: 1000;
 }
 
 .nav__box {
